# deep_learning_itba

./: .gitignore  .pre-commit-config.yaml  README.md  conda-environment.yml  pyproject.toml
.code_quality/: .flake8  pyproject_black.toml
notebooks/: keras_recomendation_system.ipynb  knn_recomm_system_model.ipynb  opensearch_conn.ipynb  recommendation_system_models.ipynb  train_recomm_system.ipynb
recommendation_system/: Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
recommendation_system/app/: __init__.py  container.py
recommendation_system/app/conf/: configurations.json
recommendation_system/app/services/configuration/: __init__.py  configuration_service.py  configurations.json
recommendation_system/app/services/database/: __init__.py  database_service.py  models.py  vectordb_service.py
recommendation_system/app/views/: __init__.py  movies.py  ping.py  users.py
recommendation_system/core/services/configuration/: __init__.py  configuration_service.py
recommendation_system/core/services/database/: __init__.py  database_service.py  models.py  vectordb_service.py
recommendation_system/data/: load_data.py  load_embeddings.py  load_values_into_database.ipynb
recommendation_system/dev/: docker-compose.yml
recommendation_system/model/: model_config.yaml  run_train.py  train.py
tp_integrador_de_python/: README.md  demo_notebook.ipynb  tp_integrador_python.ipynb
tp_integrador_de_python/helpers/: __init__.py
tp_integrador_de_python/helpers/entities/: __init__.py  base_entity.py  exceptions.py  movies.py  people.py  scores.py  users.py  utils.py  workers.py
